fixed message header
dorost cardan p message dar header

--- a/productdeatlis/Product Add/cart/Orders/orders.css
+++ b/productdeatlis/Product Add/cart/Orders/orders.css
@@ -295,7 +295,7 @@ body{
         }
         
         .messages-description{
-            display: block;
+            display: inline-block;
             line-height: 2px;
         }
         
